--- a/charts/engineering-cm-chart/templates/validating-admission-webhooks.yaml
+++ b/charts/engineering-cm-chart/templates/validating-admission-webhooks.yaml
@@ -27,6 +27,7 @@
 apiVersion: {{ $webhookApiVersion }}
 kind: ValidatingWebhookConfiguration
 metadata:
+  namespace: {{ $.Release.Namespace | quote }}
   name: {{ template "chaos-mesh.validation" . }}
   labels:
     {{- include "chaos-mesh.labels" . | nindent 4 }}
