--- a/charts/engineering-cm-chart/values.yaml
+++ b/charts/engineering-cm-chart/values.yaml
@@ -89,7 +89,7 @@ controllerManager:
   enableFilterNamespace: false
   # targetNamespace only works with clusterScoped is false(namespace scoped mode).
   # It means namespace which will be injected chaos
-  targetNamespace: xatops
+  targetNamespace: ctlsrv
 
   service:
     # Kubernetes Service type for service chaos-controller-manager
