--- a/charts/engineering-cm-chart/templates/controller-manager-deployment.yaml
+++ b/charts/engineering-cm-chart/templates/controller-manager-deployment.yaml
@@ -79,7 +79,7 @@ spec:
           - name: ALLOW_HOST_NETWORK_TESTING
             value: "{{ .Values.controllerManager.allowHostNetworkTesting }}"
           - name: TARGET_NAMESPACE
-            value: {{ .Values.controllerManager.targetNamespace | quote }}
+            value: {{ .Release.Namespace | quote }}
           - name: CLUSTER_SCOPED
             value: "{{ .Values.clusterScoped }}"
           - name: TZ
