--- a/charts/engineering-cm-chart/templates/controller-manager-rbac.yaml
+++ b/charts/engineering-cm-chart/templates/controller-manager-rbac.yaml
@@ -159,7 +159,7 @@ kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: {{ .Release.Name }}-chaos-controller-manager-target-namespace
-  namespace: {{ .Values.controllerManager.targetNamespace | quote }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     {{- include "chaos-mesh.labels" . | nindent 4 }}
     app.kubernetes.io/component: controller-manager
