Enable filtering namespace

--- a/docs/engineering-cm-chart/templates/chaos-daemon-daemonset.yaml
+++ b/docs/engineering-cm-chart/templates/chaos-daemon-daemonset.yaml
@@ -14,7 +14,7 @@
 #
 
 apiVersion: apps/v1
-kind: Deployment
+kind: DaemonSet
 metadata:
   namespace: {{ .Release.Namespace | quote }}
   name: chaos-daemon
