--- a/charts/engineering-cm-chart/templates/validating-admission-webhooks.yaml
+++ b/charts/engineering-cm-chart/templates/validating-admission-webhooks.yaml
@@ -85,7 +85,7 @@ webhooks:
 apiVersion: {{ $webhookApiVersion }}
 kind: ValidatingWebhookConfiguration
 metadata:
-  name: {{ .Release.Name }}-chaos-validation
+  name: {{ .Release.Name }}-chaos-validation-auth
   labels:
     {{- include "chaos-mesh.labels" . | nindent 4 }}
     app.kubernetes.io/component: admission-webhook
